# conan-demo

./: .gitmodules  conanfile.py  meson.build
.github/workflows/: conan.yml  dispatch.yml
src/: gen.cpp.in  gen.pc.in  main.cpp  meson.build  src.pc.in
